--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,9 @@ exclude: ["Gemfile",
           "scripts/",
           ".gitignore",
           ".sass-cache/",
-          ".idea/"]
+          ".ruby-version",
+          "_sass",
+          "third_party/sphinx-doc/"]
 exclude_from_watch: ["_docs/latest/",
                      "_data/doc_versions.yml",
                      "_data/doc_version_index.yml",
