Add test for the enabled api scanner.

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -63,6 +63,7 @@ suites:
             - model-delete
             - notifier-temp-file-deletion
             - scanner-bucket-acl-scanner
+            - scanner-enabled-apis-scanner
             - scanner-enable-audit-logging-scanner
             - scanner-run
           hosts_output: forseti-server-vm-ip
