--- a/_config.yml
+++ b/_config.yml
@@ -26,9 +26,8 @@ exclude: ["Gemfile",
           ".travis.yml",
           "travis/",
           "scripts/",
-          ".git:ignore",
+          ".gitignore",
           ".sass-cache/",
-          ".idea/",
           "Guardfile"]
 exclude_from_watch: ["_docs/latest/",
                      "_data/doc_versions.yml",
