Added guard-jekyll-plus plugin for smarter Jekyll builds

--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,8 @@ exclude: ["Gemfile",
           ".sass-cache/",
           ".ruby-version",
           "_sass",
-          "third_party/sphinx-doc/"]
+          "third_party/sphinx-doc/",
+          "Guardfile"]
 exclude_from_watch: ["_docs/latest/",
                      "_data/doc_versions.yml",
                      "_data/doc_version_index.yml",
