--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -54,6 +54,7 @@ suites:
         - name: forseti-server
           backend: ssh
           controls:
+            - enforcer-remediates-firewall-rule
             - inventory-create
             - inventory-delete
             - inventory-get-list
