--- a/integration_tests/tests/forseti/inspec.yml
+++ b/integration_tests/tests/forseti/inspec.yml
@@ -17,6 +17,9 @@ attributes:
 - name: bucket_acl_scanner_bucket_name
   required: true
   type: string
+- name: enforcer_allow_all_icmp_rule_name
+  required: true
+  type: string
 - name: forseti-cai-storage-bucket
   required: true
   type: string
