Add variable/output for the cai dump paths

--- a/integration_tests/tests/forseti/inspec.yml
+++ b/integration_tests/tests/forseti/inspec.yml
@@ -53,6 +53,9 @@ attributes:
 - name: forseti-server-vm-ip
   required: true
   type: string
+- name: inventory-performance-cai-dump-paths
+  required: true
+  type: string
 - name: kms_resources_names
   required: true
   type: array
