Verify Explain resource count matches GCP resource count (#3556)
* Adding explain test.

* Adding inventory create and destroy.

* Adding test in queue.

* File renamed for consistency.

* Added escape key.

* Using sudo for gcloud command.

* Minor: add spacing for gcloud command

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -55,6 +55,7 @@ suites:
           backend: ssh
           controls:
             - enforcer-remediates-firewall-rule
+            - explain-resource-count-match
             - inventory-create
             - inventory-delete
             - inventory-get-list
