--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -56,6 +56,7 @@ suites:
           controls:
             - enforcer-remediates-firewall-rule
             - explain-resource-count-match
+            - inventory-cai-enabled-vs-disabled
             - inventory-create
             - inventory-delete
             - inventory-get-list
