--- a/integration_tests/tests/forseti/inspec.yml
+++ b/integration_tests/tests/forseti/inspec.yml
@@ -53,6 +53,9 @@ attributes:
 - name: forseti-server-vm-ip
   required: true
   type: string
+- name: inventory-cai-eu-bucket-name
+  required: true
+  type: string
 - name: kms_resources_names
   required: true
   type: array
@@ -63,13 +66,6 @@ attributes:
   required: true
   type: string
 - name: project_id
-  required: true
-  type: string
-  default: ''
-- name: random_test_id
-  required: true
-  type: string
-- name: scanner_test_model_name
   required: true
   type: string
 - name: suffix
