--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -59,6 +59,7 @@ suites:
             - inventory-create
             - inventory-delete
             - inventory-get-list
+            - inventory-performance
             - inventory-purge
             - logs-debug-level
             - model-create-get
