--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -66,7 +66,7 @@ suites:
             - model-delete
             - notifier-temp-file-deletion
             - scanner-bucket-acl-scanner
-#            - scanner-config-validator-gcs-policy
+            - scanner-config-validator-gcs-policy
             - scanner-enabled-apis-scanner
             - scanner-enable-audit-logging-scanner
             - scanner-run
