Update email test with latest master branch. Add in tf vars to support the key and keyring to use for decrypting the pickle file. Update verify email script to support the pickle path being passed in, and minor cleanup to get ready for production use.

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -65,6 +65,7 @@ suites:
             - logs-debug-level
             - model-create-get
             - model-delete
+            - notifier-inventory-summary-email
             - notifier-temp-file-deletion
             - scanner-bucket-acl-scanner
             - scanner-config-validator-gcs-policy
