--- a/integration_tests/tests/forseti/inspec.yml
+++ b/integration_tests/tests/forseti/inspec.yml
@@ -44,6 +44,9 @@ attributes:
 - name: forseti-cloudsql-user
   required: true
   type: string
+- name: forseti-email-sender
+  required: true
+  type: string
 - name: forseti-server-service-account
   required: true
   type: string
@@ -57,6 +60,18 @@ attributes:
   required: true
   type: string
 - name: inventory-cai-eu-bucket-name
+  required: true
+  type: string
+- name: inventory-performance-cai-dump-paths
+  required: true
+  type: string
+- name: inventory-cai-eu-bucket-name
+  required: true
+  type: string
+- name: kms-key
+  required: true
+  type: string
+- name: kms-keyring
   required: true
   type: string
 - name: inventory-performance-cai-dump-paths
@@ -78,4 +93,3 @@ depends:
   - name: inspec-gcp
     git: https://github.com/inspec/inspec-gcp.git
     tag: v0.10.0
-
