--- a/configs/server/forseti_conf_server.yaml.sample
+++ b/configs/server/forseti_conf_server.yaml.sample
@@ -192,6 +192,7 @@ inventory:
         #    - rbac.authorization.k8s.io/ClusterRoleBinding
         #    - rbac.authorization.k8s.io/Role
         #    - rbac.authorization.k8s.io/RoleBinding
+        #    - serviceusage.googleapis.com/Service
         #    - spanner.googleapis.com/Database
         #    - spanner.googleapis.com/Instance
         #    - sqladmin.googleapis.com/Instance
