--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,4 +1,4 @@
-# Copyright 2019 Google LLC
+# Copyright 2020 Google LLC
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -54,25 +54,26 @@ suites:
         - name: forseti-server
           backend: ssh
           controls:
-            - enforcer-remediates-firewall-rule
-            - explain-resource-count-match
-            - inventory-cai-enabled-vs-disabled
-            - inventory-create
-            - inventory-delete
-            - inventory-get-list
-            - inventory-performance
-            - inventory-purge
-            - logs-debug-level
-            - model-create-get
-            - model-delete
-            - notifier-inventory-summary-email
-            - notifier-temp-file-deletion
-            - scanner-bucket-acl-scanner
-            - scanner-config-validator-gcs-policy
-            - scanner-enabled-apis-scanner
-            - scanner-enable-audit-logging-scanner
-            - scanner-firewall-scanner
-            - scanner-run
+#            - enforcer-remediates-firewall-rule
+#            - explain-resource-count-match
+#            - inventory-cai-enabled-vs-disabled
+#            - inventory-create
+#            - inventory-delete
+#            - inventory-get-list
+#            - inventory-performance
+#            - inventory-purge
+#            - logs-debug-level
+#            - model-create-get
+#            - model-delete
+#            - notifier-inventory-summary-email
+#            - notifier-temp-file-deletion
+#            - scanner-bucket-acl-scanner
+#            - scanner-config-validator-gcs-policy
+            - scanner-config-validator
+#            - scanner-enabled-apis-scanner
+#            - scanner-enable-audit-logging-scanner
+#            - scanner-firewall-scanner
+#            - scanner-run
           hosts_output: forseti-server-vm-ip
           user: ubuntu
           key_files:
