Update cv tests to use new constraint name format.

--- a/integration_tests/fixtures/forseti/modules/policy_library/templates/policy-library/policies/constraints/cloudsql_location.yaml
+++ b/integration_tests/fixtures/forseti/modules/policy_library/templates/policy-library/policies/constraints/cloudsql_location.yaml
@@ -15,7 +15,7 @@
 apiVersion: constraints.gatekeeper.sh/v1alpha1
 kind: GCPSQLLocationConstraintV1
 metadata:
-  name: sql_location_denylist
+  name: sql-location-denylist
 spec:
   severity: high
   match:
