--- a/integration_tests/fixtures/forseti/modules/policy_library/templates/policy-library/policies/constraints/compute_zone.yaml
+++ b/integration_tests/fixtures/forseti/modules/policy_library/templates/policy-library/policies/constraints/compute_zone.yaml
@@ -15,7 +15,7 @@
 apiVersion: constraints.gatekeeper.sh/v1alpha1
 kind: GCPComputeZoneConstraintV1
 metadata:
-  name: compute_zone_denylist
+  name: compute-zone-denylist
 spec:
   severity: high
   parameters:
