Pin setuptools to version that doesn't cause issues with pytest. Pin protobuf==3.9.0 for e2e tests.
Fix model for duplicate permissions, add e2e test to check role table is populated.

Fix e2e test for checking roles. Fix model tests.

Revert converting perm name to lowercase, it will cause issues with explain and 2 scanners since perm name would be changed. Instead will try to use a collation on the column to allow for case sensitive. Update pytest control.

Update collation type.

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -67,11 +67,11 @@ suites:
             - notifier-inventory-summary-email
             - notifier-temp-file-deletion
             - scanner-bucket-acl-scanner
-            - scanner-config-validator
             - scanner-enabled-apis-scanner
             - scanner-enable-audit-logging-scanner
             - scanner-firewall-scanner
             - scanner-run
+            - server-pytest
           hosts_output: forseti-server-vm-ip
           user: ubuntu
           key_files:
