--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,6 @@ codecov==2.0.15
 pylint==1.9.4
 flake8==3.6.0
 future==0.17.1
+
+# Latest versions of setuptools cause issues when pytest is installed
+setuptools==47.2.0
