Update violation hash to include rule name. Update unit and e2e tests. Minor cleanup, lint. Update protobuf and grpcio packages. Update cloudbuild and terraform configuration for e2e tests. Update expected role count for Forseti SA.

--- a/integration_tests/tests/forseti/inspec.yml
+++ b/integration_tests/tests/forseti/inspec.yml
@@ -20,6 +20,9 @@ attributes:
 - name: bucket_acl_scanner_all_users_bucket_name
   required: true
   type: string
+- name: cscc_source_id
+  required: true
+  type: string
 - name: enforcer_allow_all_icmp_rule_name
   required: true
   type: string
