--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -67,6 +67,7 @@ suites:
             - notifier-inventory-summary-email
             - notifier-temp-file-deletion
             - scanner-bucket-acl-scanner
+            - server-pytest
             - scanner-enabled-apis-scanner
             - scanner-enable-audit-logging-scanner
             - scanner-firewall-scanner
