--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,13 @@
 # here should also be added to setup.py
 
 # Needed for compiling of Forseti protos during the build & install.
-protobuf==3.9.0
+protobuf==3.13.0
 grpcio==1.22.0
 grpcio-tools==1.22.0
 pyyaml==4.2b4
 googleapis-common-protos[grpc]==1.6.0
-google-cloud-asset==0.3.0
+google-cloud-asset==1.3.0
+google-cloud-org-policy==0.1.2
 
 # Needed for CI/CD and Development.
 codecov==2.0.15
