Update templates, constraints, and violation types to fix cv scanner tests.

--- a/integration_tests/fixtures/forseti/modules/policy_library/templates/policy-library/policies/constraints/cloudsql_location.yaml
+++ b/integration_tests/fixtures/forseti/modules/policy_library/templates/policy-library/policies/constraints/cloudsql_location.yaml
@@ -16,10 +16,14 @@ apiVersion: constraints.gatekeeper.sh/v1alpha1
 kind: GCPSQLLocationConstraintV1
 metadata:
   name: sql-location-denylist
+  annotations:
+    description: Checks Cloud SQL instance locations against allowed or disallowed
+      locations.
 spec:
   severity: high
   match:
-    target: ["organization/*"]
+    target: # {"$ref":"#/definitions/io.k8s.cli.setters.target"}
+    - "organizations/**"
   parameters:
     mode: "denylist"
     locations:
