--- a/integration_tests/fixtures/forseti/modules/policy_library/templates/policy-library/policies/templates/gcp_sql_location_v1.yaml
+++ b/integration_tests/fixtures/forseti/modules/policy_library/templates/policy-library/policies/templates/gcp_sql_location_v1.yaml
@@ -39,12 +39,14 @@ spec:
               resources are allowed in all locations except those listed in the 'locations' parameter."
             exemptions:
               type: array
-              items: string
+              items:
+                type: string
               description: "Array of Cloud SQL instances to exempt from location restriction. String values in the array
               should correspond to the full name values of exempted Cloud SQL instances."
             locations:
               type: array
-              items: string
+              items:
+                type: string
               description: "Array of location names to be allowed or denied. Should be the region names (e.g. us-west2),
               as defined at https://cloud.google.com/sql/docs/mysql/locations and https://cloud.google.com/sql/docs/postgres/locations.
               Location names need to be exact match."
@@ -66,11 +68,11 @@ spec:
          # See the License for the specific language governing permissions and
          # limitations under the License.
          #
-         
+
          package templates.gcp.GCPSQLLocationConstraintV1
-         
+
          import data.validator.gcp.lib as lib
-         
+
          ############################################
          # Find Cloud SQL Location Violations
          ############################################
@@ -80,37 +82,37 @@ spec:
          }] {
          	constraint := input.constraint
          	lib.get_constraint_params(constraint, params)
-         
+
          	# Verify that resource is Cloud SQL instance
          	asset := input.asset
          	asset.asset_type == "sqladmin.googleapis.com/Instance"
-         
+
          	# Check if resource is in exempt list
-         	exempt_list := params.exemptions
+         	exempt_list := lib.get_default(params, "exemptions", [])
          	matches := {asset.name} & cast_set(exempt_list)
          	count(matches) == 0
-         
+
          	# Check that location is in allowlist/denylist
          	target_locations := params.locations
          	asset_location := asset.resource.data.region
          	location_matches := {asset_location} & cast_set(target_locations)
          	target_location_match_count(params.mode, desired_count)
          	count(location_matches) == desired_count
-         
+
          	message := sprintf("%v is in a disallowed location (%v).", [asset.name, asset_location])
          	metadata := {"location": asset_location, "resource": asset.name}
          }
-         
+
          #################
          # Rule Utilities
          #################
-         
+
          # Determine the overlap between locations under test and constraint
          # By default (allowlist), we violate if there isn't overlap
          target_location_match_count(mode) = 0 {
          	mode != "denylist"
          }
-         
+
          target_location_match_count(mode) = 1 {
          	mode == "denylist"
          }
