--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -11,7 +11,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# Purpose - This Google Cloudbuild configuration mimics the same stesps found
+# Purpose - This Google Cloudbuild configuration mimics the same steps found
 # in .travis.yml.  This could potentially be used in lieu of TravisCI
 
 steps:
