--- a/integration_tests/fixtures/forseti/modules/rules/templates/rules/enabled_apis_rules.yaml
+++ b/integration_tests/fixtures/forseti/modules/rules/templates/rules/enabled_apis_rules.yaml
@@ -1,4 +1,4 @@
-# Copyright 2018 The Forseti Security Authors. All rights reserved.
+# Copyright 2020 The Forseti Security Authors. All rights reserved.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -13,7 +13,7 @@
 # limitations under the License.
 
 rules:
-  - name: Enabled APIs blacklist
+  - name: Restrict Compute Engine API
     mode: blacklist
     resource:
       - type: project
