Split up server tests into multiple verifiers to see if that helps the tests complete.

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -46,15 +46,10 @@ suites:
           shell: true
           shell_options: "--login"
           show_progress: true
-        - name: forseti-server-inventory
+        - name: forseti-server-inventory-performance
           backend: ssh
           controls:
-            - enforcer-remediates-firewall-rule
-            - explain-resource-count-match
-            - inventory-cai-enabled-vs-disabled
-            - inventory-delete
             - inventory-performance
-#            - inventory-purge
           hosts_output: forseti-server-vm-ip
           user: ubuntu
           key_files:
@@ -63,9 +58,14 @@ suites:
           shell: true
           shell_options: "--login"
           show_progress: true
-        - name: forseti-server-scanner-notifier
+        - name: forseti-server-inspec
           backend: ssh
           controls:
+            - enforcer-remediates-firewall-rule
+            - explain-resource-count-match
+            - inventory-cai-enabled-vs-disabled
+            - inventory-delete
+#            - inventory-purge
             - logs-debug-level
             - notifier-inventory-summary-email
             - notifier-temp-file-deletion
@@ -73,6 +73,17 @@ suites:
             - scanner-enable-audit-logging-scanner
             - scanner-firewall-scanner
             - scanner-run
+          hosts_output: forseti-server-vm-ip
+          user: ubuntu
+          key_files:
+            - integration_tests/fixtures/forseti/sshkey
+          proxy_command: ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -o IdentitiesOnly=yes -o LogLevel=ERROR -o ForwardAgent=no -i integration_tests/fixtures/bastion/tls_private_key ubuntu@<%= `terraform output -state integration_tests/fixtures/forseti/terraform.tfstate.d/kitchen-terraform-forseti-local/terraform.tfstate bastion_host 2> /dev/null`.strip %> -p 22 -W %h:%p
+          shell: true
+          shell_options: "--login"
+          show_progress: true
+        - name: forseti-server-pytest
+          backend: ssh
+          controls:
             - server-pytest
           hosts_output: forseti-server-vm-ip
           user: ubuntu
