Add cloudbuild config for lint tests. Remove Travis configuration, and some of the minor references to Travis in this repo. There is still more work to do to modify some of the scripts to remove Travis references; although for now it doesn't hurt.

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -12,7 +12,7 @@
 # limitations under the License.
 
 # Purpose - This Google Cloudbuild configuration mimics the same steps found
-# in .travis.yml.  This could potentially be used in lieu of TravisCI
+# in the deleted .travis.yml.
 
 steps:
 - name: 'gcr.io/cloud-builders/docker'
