--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,14 @@ dependencies = [
 requires-python = ">=3.8"
 readme = "README.md"
 license = {text = "Apache 2.0"}
-keywords = ["gcp google cloud platform security tools"]
+keywords = [
+    "gcp",
+    "google",
+    "cloud",
+    "platform",
+    "security",
+    "tools"
+]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Environment :: Console",
